2006-04-26  Werner Koch  <wk@g10code.com>

	Released 1.0.1.

2006-04-25  Werner Koch  <wk@g10code.com>

	* src/Makefile.am (clean-local): Also remove the light installer.

	* src/installer.nsi (PrintNonAdminWarning): Use Quit instead of Abort.

	* src/uninst-glib.nsi: Delete console helper.

	* configure.ac: Define manual versions.

	* src/inst-sections.nsi: Do not install the GGPee manual in the QLB.

2006-04-24  Werner Koch  <wk@g10code.com>

	* src/Makefile.am (NEWS.tmp): New. Use it in the README files
	so that the comment lines are not visible.

	* packages/packages.current: Updated GPGee, WinPT and GPGol.

2006-04-22  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpg4win.mk (stamps/stamp-final-$(1)): Depend on
	stamps/stamp-directories.

	* src/installer.nsi (T_InstOptLabelB): New string.
	(CustomPageOptions): Install new string.
	* src/installer-options.ini.in (Field 5): Add new field.
	(NumFields): Set to 5.
	* src/inst-sections.nsi: Do not install manuals and other
	documents in the quick launch bar.  Do not install the README on
	the desktop.

	* src/Makefile.am (gpg4win_spkgs): Move man_novice_de and
	man_advanced_de to ...
	(gpg4win_ipkgs): ... here.
	* src/gpg4win.mk.in (IPKG_template): New template.
	Insert it for each internal package.

2006-04-20  Werner Koch  <wk@g10code.com>

	* src/installer.nsi: Pop up a message before shutting down winpt.

2006-04-19  Werner Koch  <wk@g10code.com>

	* src/installer.nsi: Abort installation if not run as Admin.

2006-04-08  Marcus Brinkmann  <marcus@g10code.de>

	* m4/gpg4win.m4 (GPG4WIN_IPKG): New macro for internal packages.
	* include/config.nsi.in (gpg4win_pkg_man_novice_de,
	gpg4win_pkg_man_novice_de_version, gpg4win_pkg_man_advanced_de,
	gpg4win_pkg_man_advanced_de_version): Removed.
	* src/installer.nsi [GPG4WIN_LIGHT]: Set the output filename for
	the light installer.
	* configure.ac: New option --enable-light-installer to control the
	new automake conditional BUILD_LIGHT_INSTALLER.